# dspy-opentom

./: .env.template  .gitignore  README.md  cot.py  cot_modules.pkl  cot_with_thought.py  dspy.ipynb  get_data.py  logs.txt  main.py  opentom_evaluator.py  pyproject.toml
